syntax = "proto3";

option csharp_namespace = "GRPC.Core";

package greet;

// The greeting service definition.
service GreeterServer1 {
  // Sends a greeting
  rpc SayHello (HelloRequest1) returns (HelloReply1);
}

// The request message containing the user's name.
message HelloRequest1 {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply1 {
  string message = 1;
}
